--- a/atm-app/src/App.css
+++ b/atm-app/src/App.css
@@ -1,11 +1,6 @@
 .App {
-  text-align: center;
-}
-
-.App-header {
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+
+  width: 100%;
+  height: 100vh;
 }
