--- a/atm-app/src/components/Accounts/styles.css
+++ b/atm-app/src/components/Accounts/styles.css
@@ -1,4 +1,4 @@
-.Withdraw-container {
+.Accounts-container {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -13,16 +13,6 @@
   border: 1px solid #F0F0F0;
   border-radius: 15px;
   box-shadow: 0px 10px 6px #00000029;
-}
-
-.input {
-  width: 50%;
-
-  padding: 15px;
-
-  border: 1px solid #F0F0F0;
-  border-radius: 5px;
-  box-shadow: 0px 5px 3px #00000029;
 }
 
 .button {
@@ -48,10 +38,6 @@
 }
 
 @media only screen and (max-width: 1024px) {
-  .input {
-    width: 100%;
-  }
-
   .button {
     width: 100%;
   }
