--- a/atm-app/src/components/Accounts/styles.css
+++ b/atm-app/src/components/Accounts/styles.css
@@ -3,16 +3,13 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  overflow-y: scroll;
 
   width: 100%;
   height: 100%;
 
   padding: 15px;
   gap: 15px;
-
-  border: 1px solid #F0F0F0;
-  border-radius: 15px;
-  box-shadow: 0px 10px 6px #00000029;
 }
 
 .button {
@@ -20,13 +17,12 @@
   justify-content: center;
   align-items: center;
 
-  width: 25%;
+  min-width: 25%;
 
   padding: 15px;
 
   color: #FFFFFF;
-
-  background: #3233FD 0% 0% no-repeat padding-box;
+  background-color: #3233FD;
   border: 0px;
   border-radius: 35px;
 
@@ -38,6 +34,11 @@
 }
 
 @media only screen and (max-width: 1024px) {
+  .Accounts-container {
+    justify-content: center;
+    align-items: center;
+  }
+
   .button {
     width: 100%;
   }
