--- a/atm-app/src/components/Home/styles.css
+++ b/atm-app/src/components/Home/styles.css
@@ -1,5 +1,6 @@
 .Home-container {
   display: flex;
+  flex-direction: row;
 
   width: 100%;
   height: 100%;
@@ -39,7 +40,7 @@
   justify-content: flex-start;
   align-items: flex-start;
 
-  width: 85%;
+  width: 100%;
 
   padding: 30px;
   gap: 15px;
@@ -53,11 +54,13 @@
 
   width: 100%;
 
-  padding: 15px;
-
   border: 1px solid #F0F0F0;
   border-radius: 15px;
   box-shadow: 0px 10px 6px #00000029;
+}
+
+.header h1 {
+  padding-left: 10px;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -67,5 +70,7 @@
 
   .sidebar {
     flex-direction: row;
+
+    width: 100%;
   }
 }
