--- a/atm-app/src/components/Withdraw/styles.css
+++ b/atm-app/src/components/Withdraw/styles.css
@@ -7,16 +7,11 @@
   width: 100%;
   height: 100%;
 
-  padding: 15px;
   gap: 15px;
-
-  border: 1px solid #F0F0F0;
-  border-radius: 15px;
-  box-shadow: 0px 10px 6px #00000029;
 }
 
 .input {
-  width: 50%;
+  width: 30%;
 
   padding: 15px;
 
@@ -30,13 +25,13 @@
   justify-content: center;
   align-items: center;
 
-  width: 25%;
+  width: 30%;
 
   padding: 15px;
+  margin-left: 15px;
 
   color: #FFFFFF;
-
-  background: #3233FD 0% 0% no-repeat padding-box;
+  background-color: #3233FD;
   border: 0px;
   border-radius: 35px;
 
@@ -48,11 +43,16 @@
 }
 
 @media only screen and (max-width: 1024px) {
+  .Withdraw-container {
+    justify-content: center;
+    align-items: center;
+  }
+
   .input {
-    width: 100%;
+    width: 50%;
   }
 
   .button {
-    width: 100%;
+    margin-left: 0;
   }
 }
