--- a/atm-app/src/components/Home/styles.css
+++ b/atm-app/src/components/Home/styles.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
 
   padding: 30px;
   gap: 15px;
@@ -37,8 +37,8 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
 
   width: 100%;
 
@@ -60,7 +60,7 @@
 }
 
 .header h1 {
-  padding-left: 10px;
+  padding-left: 15px;
 }
 
 @media only screen and (max-width: 1024px) {
