--- a/atm-app/src/components/Customers/styles.css
+++ b/atm-app/src/components/Customers/styles.css
@@ -1,6 +1,7 @@
 .Register-container,
 .Login-container {
     font-family: 'Courier New', Courier, monospace;
+    margin: 2rem 1.5rem;
 }
 
 .register-form,
@@ -8,7 +9,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     margin-top: -5px;
 }
 
@@ -17,28 +17,36 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin: 3px 44px;
+    width: 85%;
+    margin: 0 1.5rem;
     border: 1px solid #eaecef;
     border-radius: 25px;
     box-shadow: 0px 5px 3px #00000029;
+
 }
+
+h2, span {
+    text-align: center;
+}
+
 
 .register-div,
 .login-div {
-    width: 75%;
-    padding: 12px 3px;
+    width: 80%;
+    padding: 0 0.4rem;
+
 }
 
 .register-label,
 .login-label {
     font-size: 14px;
+
 }
 
 .register-input,
 .login-input {
-    padding: 12px;
+    margin: 0.5rem 0;
+    padding: 1rem;
     width: 100%;
     border: 1px solid #eaecef;
     border-radius: 5px;
@@ -49,7 +57,7 @@
 .login-button {
     text-align: center;
     flex: 1;
-    width: 100%;
+    width: 94%;
     background-color: #3233FD;
     color: #ffffff;
     font-weight: bold;
@@ -57,7 +65,7 @@
     border: none;
     border-radius: 35px;
     padding: 1rem 1.5rem;
-    margin: 8px 2px;
+    margin: 2rem 1.5rem;
 
     &:hover {
         background-color: #ffffff;
