--- a/atm-app/src/components/Home/styles.css
+++ b/atm-app/src/components/Home/styles.css
@@ -14,18 +14,25 @@
   justify-content: flex-start;
   align-items: center;
 
-  padding: 30px;
-  gap: 15px;
+  padding: 1.8rem 1rem;
+  gap: 1rem;
 
   background-color: #3233FD;
   color: #FFFFFF;
+}
+svg {
+  height: 1rem;
+  width: 1rem;
+}
+.textHeader {
+  font-size: 12px;
 }
 
 .sidebar li {
   display: flex;
   align-items: center;
 
-  gap: 5px;
+  gap: 3px;
 
   cursor: pointer;
 }
