--- a/atm-app/src/components/Customers/styles.css
+++ b/atm-app/src/components/Customers/styles.css
@@ -1,11 +1,14 @@
 .Register-container,
-.Login-container {
+.Login-container,
+.Edit-container,
+.Customers-container {
   font-family: "Courier New", Courier, monospace;
   margin: 2rem 1.5rem;
 }
 
 .register-form,
-.login-form {
+.login-form,
+.edit-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,7 +16,8 @@
 }
 
 .register-fieldset,
-.login-fieldset {
+.login-fieldset,
+.edit-fieldset {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,18 +34,21 @@ span {
 }
 
 .register-div,
-.login-div {
+.login-div,
+.edit-div {
   width: 80%;
   padding: 0 0.4rem;
 }
 
 .register-label,
-.login-label {
+.login-label,
+.edit-label {
   font-size: 14px;
 }
 
 .register-input,
-.login-input {
+.login-input,
+.edit-input {
   margin: 0.5rem 0;
   padding: 1rem;
   width: 100%;
@@ -51,7 +58,8 @@ span {
 }
 
 .register-button,
-.login-button {
+.login-button,
+.edit-button {
   text-align: center;
   flex: 1;
   width: 94%;
@@ -72,9 +80,52 @@ span {
   }
 }
 
+.search-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+}
+
+.search-input {
+  padding: 10px;
+  border: 1px solid #00000029;
+  border-radius: 10px;
+  font-size: 16px;
+  outline: none;
+}
+
+.search-button,
+.search-all-button {
+  text-align: center;
+  width: max-content;
+  background-color: #4647fd;
+  color: #ffffff;
+  cursor: pointer;
+  font-weight: bold;
+  border: none;
+  border-radius: 16px;
+  padding: 10px 20px;
+  margin: 0.5rem 1.5rem;
+}
+
+.list-one,
+.list-all {
+  display: flexbox;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  padding: 16px;
+}
+
 .message {
   display: block;
   color: #ff4040;
   text-align: center;
   font-weight: bold;
+}
+
+.error {
+  color: #e54922;
 }
