--- a/atm-app/src/components/Withdraw/styles.css
+++ b/atm-app/src/components/Withdraw/styles.css
@@ -1,41 +1,37 @@
 .Withdraw-container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-
+  align-items: center;
+  margin: 1rem 0.5rem;
   width: 100%;
   height: 100%;
-
-  gap: 15px;
+  gap: 1.5rem;
 }
 
 .input {
-  width: 30%;
-
-  padding: 15px;
-
+  padding: 1rem;
   border: 1px solid #F0F0F0;
   border-radius: 5px;
   box-shadow: 0px 5px 3px #00000029;
 }
 
-.button {
+.button-withdraw {
   display: flex;
   justify-content: center;
-  align-items: center;
-
-  width: 30%;
-
-  padding: 15px;
-  margin-left: 15px;
-
+  padding: 1rem;
+  margin-left: 1rem;
   color: #FFFFFF;
   background-color: #3233FD;
   border: 0px;
   border-radius: 35px;
-
   cursor: pointer;
+
+  &:hover {
+    background-color: #ffffff;
+    color: #3233fd;
+    border: 1px solid #3233fd;
+    font-weight: bold;
+  }
 }
 
 .error {
