update styles atm project

--- a/atm-app/src/components/Home/styles.css
+++ b/atm-app/src/components/Home/styles.css
@@ -59,6 +59,10 @@ svg {
   padding-left: 1rem;
   color: #3233fd;
 }
+.img-logo {
+  height: 4rem;
+  width: 4rem;
+}
 
 @media only screen and (max-width: 1024px) {
   .Home-container {
