--- a/atm-app/src/components/Accounts/styles.css
+++ b/atm-app/src/components/Accounts/styles.css
@@ -2,13 +2,14 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   overflow-y: scroll;
   width: 100%;
   height: 100%;
-  padding: 8px;
+  padding: 0.5rem;
 }
-.div-buttons{
+
+.div-buttons {
   display: flex;
   flex-direction: row;
   gap: 0.5rem;
@@ -25,6 +26,7 @@
   border: 0px;
   border-radius: 35px;
   cursor: pointer;
+
   &:hover {
     background-color: #ffffff;
     color: #3233fd;
@@ -65,6 +67,21 @@
   border-radius: 3px;
 }
 
+.account-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  padding: 2rem;
+  margin-top: 0.9rem;
+  border: 1px solid #f0f0f0;
+  border-radius: 15px;
+  box-shadow: 0px 10px 6px #00000029;
+
+}
+
+
 .error {
   color: #E54922;
 }
@@ -73,6 +90,15 @@
   .Accounts-container {
     justify-content: center;
     align-items: center;
+  }
+
+  .div-buttons {
+    flex-direction: column;
+  }
+
+  .account-list {
+    padding: 0.5rem;
+    margin-top: 0.5rem;
   }
 
   .button {
