--- a/atm-app/src/components/Customers/styles.css
+++ b/atm-app/src/components/Customers/styles.css
@@ -7,7 +7,7 @@
 .login-form {
   display: flex;
   flex-direction: column;
-  
+
 }
 
 .register-fieldset,
@@ -30,7 +30,8 @@
 }
 
 h2,
-span,h3 {
+span,
+h3 {
   text-align: center;
 }
 
@@ -75,6 +76,15 @@ span,h3 {
     border: 1px solid #3233fd;
     font-weight: bold;
   }
+}
+
+.register-list {
+  width: 90%;
+  padding: 0.5rem;
+  margin-top: 0.9rem;
+  border: 1px solid #f0f0f0;
+  border-radius: 15px;
+  box-shadow: 0px 10px 6px #00000029;
 }
 
 .message {
