--- a/atm-app/src/components/Accounts/styles.css
+++ b/atm-app/src/components/Accounts/styles.css
@@ -20,17 +20,17 @@
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  color: #FFFFFF;
+  color: var(--color-primary);
   font-weight: bold;
-  background-color: #3233FD;
+  background-color: var(--backgound-color);
   border: 0px;
   border-radius: 35px;
   cursor: pointer;
 
   &:hover {
-    background-color: #ffffff;
-    color: #3233fd;
-    border: 1px solid #3233fd;
+    background-color: var(--color-primary);
+    color: var(--backgound-color);
+    border: 1px solid var(--backgound-color);
     font-weight: bold;
   }
 }
@@ -41,9 +41,9 @@
   align-items: center;
   gap: 8px;
   padding: 1rem;
-  color: #FFFFFF;
+  color: var(--color-primary);
   font-weight: bold;
-  background-color: #9b111e;
+  background-color: var(--button-delete);
   border: 0px;
   border-radius: 35px;
   cursor: pointer;
@@ -62,8 +62,8 @@
 .icon-copy:hover,
 .icon-edit:hover,
 .icon-delete:hover {
-  background-color: #8c8c8c;
-  color: #fff;
+  background-color: var(--button-hover);
+  color: var(--color-primary);
   border-radius: 3px;
 }
 
@@ -75,15 +75,15 @@
   width: 80%;
   padding: 2rem;
   margin-top: 0.9rem;
-  border: 1px solid #f0f0f0;
+  border: 1px solid var(--border--color);
   border-radius: 15px;
-  box-shadow: 0px 10px 6px #00000029;
+  box-shadow: 0px 10px 6px var(--box-shadow);
 
 }
 
 
 .error {
-  color: #E54922;
+  color: var(--error-color);
 }
 
 @media only screen and (max-width: 1024px) {
