--- a/atm-app/src/components/Home/styles.css
+++ b/atm-app/src/components/Home/styles.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   width: 100%;
   height: 100%;
-  background-color: #f9fbfb;
+  background-color: var(--color-screen);
 }
 
 .sidebar {
@@ -13,8 +13,8 @@
   flex-wrap: wrap;
   padding: 0.5rem;
   gap: 0.5rem;
-  background-color: #3233FD;
-  color: #FFFFFF;
+  background-color: var(--backgound-color);
+  color: var(--color-primary);
 }
 
 svg {
@@ -34,7 +34,7 @@ svg {
 }
 
 .sidebar li:hover {
-  color: #05d3ac;
+  color: var(--color-sidebar-hover);
 }
 
 .main {
@@ -50,14 +50,14 @@ svg {
   align-items: center;
   width: 90%;
   margin: 1rem 1rem;
-  border: 1px solid #f0f0f0;
+  border: 1px solid var(--border--color);
   border-radius: 15px;
-  box-shadow: 0px 10px 6px #00000029;
+  box-shadow: 0px 10px 6px var(--box-shadow);
 }
 
 .header h1 {
   padding-left: 1rem;
-  color: #3233fd;
+  color: var(--backgound-color);
 }
 
 .img-logo {
