--- a/atm-app/src/components/Modals/stylesModal.css
+++ b/atm-app/src/components/Modals/stylesModal.css
@@ -3,7 +3,7 @@
   inset: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: var(--color-screen);
   opacity: 0.9;
 }
 
@@ -18,10 +18,10 @@
   min-width: 320px;
   max-width: 80%;
   transform: translate(-50%, -50%);
-  background-color: #ffffff;
-  border: 1px solid #eaecef;
+  background-color: var(--color-primary);
+  border: 1px solid var(--border--color);
   border-radius: 6px;
-  box-shadow: 0px 0px 10px #00000029;
+  box-shadow: 0px 0px 10px var(--box-shadow);
   padding: 32px 8px;
 }
 
@@ -41,6 +41,6 @@
   right: 24px;
   font-size: 32px;
   cursor: pointer;
-  color: #555555;
+  color: var(--button-close);
   transition: opacity 0.5s ease-in-out;
 }
