--- a/atm-app/src/components/Withdraw/styles.css
+++ b/atm-app/src/components/Withdraw/styles.css
@@ -10,9 +10,9 @@
 
 .input {
   padding: 1rem;
-  border: 1px solid #F0F0F0;
+  border: 1px solid var(--border--color);
   border-radius: 5px;
-  box-shadow: 0px 5px 3px #00000029;
+  box-shadow: 0px 5px 3px var(--box-shadow);
 }
 
 .button-withdraw {
@@ -20,22 +20,22 @@
   justify-content: center;
   padding: 1rem;
   margin-left: 1rem;
-  color: #FFFFFF;
-  background-color: #3233FD;
+  color: var(--color-primary);
+  background-color: var(--backgound-color);
   border: 0px;
   border-radius: 35px;
   cursor: pointer;
 
   &:hover {
-    background-color: #ffffff;
-    color: #3233fd;
-    border: 1px solid #3233fd;
+    background-color: var(--color-primary);
+    color: var(--backgound-color);
+    border: 1px solid var(--backgound-color);
     font-weight: bold;
   }
 }
 
 .error {
-  color: #E54922;
+  color: var(--error-color);
 }
 
 @media only screen and (max-width: 1024px) {
